Uppdaterad controller med flera nya funktioner. Jag lade till riktig inloggning via UserManager, registrering via separat RegisterView. Lade till stöd för användarroller, admin och vanlig användare, adminläge där admin kan se alla bokningar och personuppgifter. Lade till mer komplett bokningsinformation: namn, telefon och email. Och lade till väntelista per datum och tid via WaitingQueueManager. Om en bokad tid redan finns kan användaren nu hamna i kö och när en bokning tas bort får nästa person i kön automatiskt tiden. Lade till månadsnavigering med previous och next. Förhindrar att användaren går tillbaka till tidigare månader, vanliga användare ser bara sina egna bokningar och köplatser. Förbättrad delete funktion där användaren väljer bokningsnummer.